# repomix

./: .gitignore  package-lock.json  package.json
.github/workflows/: rust.yml
browser/: package-lock.json
repomix-rust/: .gitignore  Cargo.toml  dummy_secret.txt  known-issues.md  mcp_test.jsonl  output.md  output.txt  output.xml  output_git.xml  output_main_compressed.txt  output_main_raw.txt  output_remote.xml
repomix-rust/src/: lib.rs  main.rs
repomix-rust/src/cli/: init.rs  mod.rs  tui.rs
repomix-rust/src/config/: default_ignore.rs  global_directory.rs  jiti_config_loader.js  load.rs  mod.rs  schema.rs  tests.rs
repomix-rust/src/core/: mod.rs  pack.rs
repomix-rust/src/core/compress/: mod.rs  queries.rs
repomix-rust/src/core/file/: binary_extensions.rs  mod.rs  process.rs
repomix-rust/src/core/git/: mod.rs
repomix-rust/src/core/metrics/: mod.rs  token_tree.rs
repomix-rust/src/core/output/: mod.rs
repomix-rust/src/core/remote/: mod.rs
repomix-rust/src/core/security/: mod.rs
repomix-rust/src/mcp/: mod.rs
repomix-rust/src/shared/: logger.rs  mod.rs
repomix-rust/tests/: cli_behavior_test.rs  comparison_test.rs  file_collection_test.rs  mcp_test.rs
website/client/: package-lock.json
website/server/: package-lock.json  package.json
