[package]
name = "repomix"
version = "0.1.0"
edition = "2021"
authors = ["Kazuki Yamada <koukun0120@gmail.com>"]
description = "Pack your codebase into AI-friendly formats"

[dependencies]
# CLI & Configuration
clap = { version = "4.5", features = ["derive", "env"] } # Commander.js alternative
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json5 = "0.4" # JSON5 support
toml = "0.8"
dirs = "5.0" # Home directory retrieval

# Async & Runtime
tokio = { version = "1.36", features = ["full"] } # Async runtime
futures = "0.3"

# Logging & Error Handling
tracing = "0.1" # Logging
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0" # Error handling
thiserror = "1.0"

# File System & Glob
ignore = "0.4" # .gitignore aware file walker
glob = "0.3"
path-clean = "1.0"
dunce = "1.0" # Windows path normalization

# Utilities
rayon = "1.8" # Data parallelism
tiktoken-rs = "0.5" # Token counting
indicatif = "0.17" # Progress bar
console = "0.15" # Terminal output control
arboard = "3.3" # Clipboard operations
regex = "1.10"
lazy_static = "1.4"

# Tree-sitter
tree-sitter = "0.20"
tree-sitter-rust = "0.20"
tree-sitter-typescript = "0.20"
tree-sitter-javascript = "0.20"
tree-sitter-python = "0.20"
tree-sitter-go = "0.20"

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
